--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todolist-react",
   "version": "0.1.0",
-  "homepage": "http://lynn-hsiao.github.io/login",
+  "homepage": "http://Lynn-Hsiao.github.io/Todolist",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
